TERCERA ENTREGA-preentrega SASS

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -49,7 +49,7 @@
                 </p><br>
         </section>
     </main>
-    <footer>
+    <footer class="footerSN">
         <nav class="footerCatalogo">
             <ul>
                 <li class="liCatalogo"><a href="./catalogo.html">CATALOGO</a></li>
