--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <nav>
             <input type="checkbox" name="" id="toggle">
-            <label for="toggle"><i class="material-icons"><img src="./assets/menu-logo.png" alt=""></i></label>
+            <label for="toggle"><i class="material-icons"><img src="./assets/menu-logo.png" alt="logo menu"></i></label>
             <div class="menu">
                 <ul>
                     <li><a href="./pages/catalogo.html">Catalogo</a></li>
