--- a/pages/locales.html
+++ b/pages/locales.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="locales de ropa,tiendas, ropa de mujer, indumentaria femenina">
+    <meta name="description" content="Veni a conocer nuestros locales y llevate lo mejor para vos.">
+    <meta name="author" content="Matias Verdejo">
+    <meta property="og:title" content="Lifetime Indumentaria">
+    <meta property="og:site_name" content="Lifetime Indumentaria">
+    <meta property="og:url" content="www.lifetimeindumentaria/locales.com">
+    <meta property="og:description" content="Veni a conocer nuestros locales y llevate lo mejor para vos.">
     <title>LOCALES/LIFETIME INDUMENTARIA</title>
     <link rel="shortcut icon" href="../assets/tendedero.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -16,7 +24,7 @@
         </div>
         <nav>
             <input type="checkbox" name="" id="toggle">
-            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt=""></i></label>
+            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt="logo menu"></i></label>
             <div class="menu">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -31,15 +39,11 @@
         <section>
             <div><h1 class="headerCatalogo">¡NUESTROS LOCALES!</h1></div>
         </section>
-        <section class="sectionCatalogo">
-            <div>
-                <h2 class="h2-locales">FLORES</h2><img src="../assets/ubicacion-flores-foto.jpg" width="500px" height="500px" alt=""><p class="pLocales">Av. Avellaneda & Nazca <br>lun a vie de 09 a 17 hs.</p>
-            </div>   
-            <div>  
-                <h2 class="h2-locales">MUNRO</h2><img src="../assets/ubicacion-munro-foto.jpg" width="500px" height="500px" alt=""><p class="pLocales">Vélez Sarfield & Av. Bartolome Mitre <br>mar a sab de 10 a 18 hs.</p>
-            </div>     
-            <div>
-                <h2 class="h2-locales">TIGRE</h2><img src="../assets/ubicacion-tigre-foto.jpg" width="500px" height="500px" alt=""><p class="pLocales">Shopping Remeros Plaza, <br>Av. Santa María de las Conchas <br>todos los dias de 10 a 21 hs.</p>
+        <section class="conteiner text-center">
+            <div class="col">
+                <div class="row-4"><h2 class="h2-locales"><p>FLORES</p></h2><img src="../assets/ubicacion-flores-foto.jpg" width="300px" height="300px" alt="mapa flores"><p class="pLocales">Av. Avellaneda & Nazca <br>lun a vie de 09 a 17 hs.</p></div>
+                <div class="row-4"><h2 class="h2-locales"><p>MUNRO</p></h2><img src="../assets/ubicacion-munro-foto.jpg" width="300px" height="300px" alt="mapa munro"><p class="pLocales">Vélez Sarfield & Av. Bartolome Mitre <br>mar a sab de 10 a 18 hs.</p></div>
+                <div class="row-4"><h2 class="h2-locales"><p>TIGRE</p></h2><img src="../assets/ubicacion-tigre-foto.jpg" width="300px" height="300px" alt="mapa tigre"><p class="pLocales">Shopping Remeros Plaza, <br>Av. Santa María de las Conchas <br>todos los dias de 10 a 21 hs.</p></div>
             </div>
         </section>
     </main>
@@ -51,6 +55,7 @@
                 <li class="liCatalogo"><a href="../index.html">VOLVER AL INICIO</a></li>
             </ul>
         </nav>
-</footer>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
