--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="catalogo, ropa de mujer, indumentaria femenina">
+    <meta name="description" content="Visita nuestro catalogo y busca todo lo que tenemos para vos.">
+    <meta name="author" content="Matias Verdejo">
+    <meta property="og:title" content="Lifetime Indumentaria">
+    <meta property="og:site_name" content="Lifetime Indumentaria">
+    <meta property="og:url" content="www.lifetimeindumentaria/catalogo.com">
+    <meta property="og:description" content="Visita nuestro catalogo y busca todo lo que tenemos para vos.">
     <title>CATALOGO/LIFETIME INDUMENTARIA</title>
     <link rel="shortcut icon" href="../assets/tendedero.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -16,7 +24,7 @@
         </div>
         <nav>
             <input type="checkbox" name="" id="toggle">
-            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt=""></i></label>
+            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt="logo menu"></i></label>
             <div class="menu">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -31,44 +39,23 @@
         <section>
             <div><h1 class="headerCatalogo">¡NUESTRO CATÁLOGO!</h1></div>
         </section>
-        <!-- <section class="sectionCatalogo">
-            <div>
-                <img src="../assets/remeras-foto.jpg" width="500px" height="500px" alt="">
-                <h2 class="h2Catalogo"><p>REMERAS</p></h2>
-            </div>
-        </section>
-        <section class="sectionCatalogo">
-            <div>
-                <img src="../assets/pantalones-foto.jpg" width="500px" height="500px" alt="">
-                <h2 class="h2Catalogo"><p>PANTALONES</p></h2>
-            </div>
-        </section>
-        <section class="sectionCatalogo">
-            <div>
-                <img src="../assets/buzos-foto.jpg" width="500px" height="500px" alt="">
-                <h2 class="h2Catalogo"><p>BUZOS</p></h2>
-            </div>
-        </section> -->
-        <section class="sectionCatalogo">
-            <div>
-                <h2 class="h2Catalogo"><p>REMERAS</p></h2><img src="../assets/remeras-foto.jpg" width="500px" height="500px" alt="">
-            </div>
-            <div>    
-                <h2 class="h2Catalogo"><p>PANTALONES</p></h2><img src="../assets/pantalones-foto.jpg" width="500px" height="500px" alt="">
-            </div>
-            <div>   
-                <h2 class="h2Catalogo"><p>BUZOS</p></h2><img src="../assets/buzos-foto.jpg" width="500px" height="500px" alt="">
+        <section class="conteiner text-center">
+            <div class="col">
+                <div class="row-4"><h2 class="h2Catalogo"><p>REMERAS</p></h2><img src="../assets/remeras-foto.jpg" width="300px" height="300px" alt="fotos de remeras"></div>
+                <div class="row-4"><h2 class="h2Catalogo"><p>PANTALONES</p></h2><img src="../assets/pantalones-foto.jpg" width="300px" height="300px" alt="foto de panatlones"></div>
+                <div class="row-4"><h2 class="h2Catalogo"><p>BUZOS</p></h2><img src="../assets/buzos-foto.jpg" width="300px" height="300px" alt="foto de buzos"></div>
             </div>
         </section>
     </main>
     <footer>
-            <nav class="footerCatalogo">
-                <ul>
-                    <li class="liCatalogo"><a href="./locales.html">LOCALES</a></li>
-                    <li class="liCatalogo"><a href="./contactos.html">CONTACTOS</a></li>
-                    <li class="liCatalogo"><a href="../index.html">VOLVER AL INICIO</a></li>
-                </ul>
-            </nav>
+        <nav class="footerCatalogo">
+            <ul>
+                <li class="liCatalogo"><a href="./locales.html">LOCALES</a></li>
+                <li class="liCatalogo"><a href="./contactos.html">CONTACTOS</a></li>
+                <li class="liCatalogo"><a href="../index.html">VOLVER AL INICIO</a></li>
+            </ul>
+        </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
