--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="contactos, tienda online, ropa de mujer, indumentaria femenina">
+    <meta name="description" content="Contactanos para mas informacion.">
+    <meta name="author" content="Matias Verdejo">
+    <meta property="og:title" content="Lifetime Indumentaria">
+    <meta property="og:site_name" content="Lifetime Indumentaria">
+    <meta property="og:url" content="www.lifetimeindumentaria/contactos.com">
+    <meta property="og:description" content="Contactanos para mas informacion.">
     <title>CONTACTOS/LIFETIME INDUMENTARIA</title>
     <link rel="shortcut icon" href="../assets/tendedero.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -16,7 +24,7 @@
         </div>
         <nav>
             <input type="checkbox" name="" id="toggle">
-            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt=""></i></label>
+            <label for="toggle"><i class="material-icons"><img src="../assets/menu-logo.png" alt="logo menu"></i></label>
             <div class="menu">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -32,29 +40,29 @@
             <div><h1 class="headerCatalogo">¡NUESTROS CONTACTOS!</h1></div>
         </section>
         <section class="mainContactos">
-        <section>
-            <div class="div1contactos">
-                <ul class="ul1Contactos">
-                   <li><a href="https://instagram.com/lifetime.indumentaria?igshid=NzAzN2Q1NTE="><img src="../assets/instagram-logo-color.png" alt=""></a><a href="https://instagram.com/lifetime.indumentaria?igshid=NzAzN2Q1NTE=">lifetime.indumentaria</a></li>
-                   <li class="facebookLi"><a href="https://www.facebook.com/lifetime.indumentaria?mibextid=LQQJ4d"><img src="../assets/facebook-logo-color.png" alt=""></a><a href="https://www.facebook.com/lifetime.indumentaria?mibextid=LQQJ4d">Lifetime Indumentaria</a></li>
-                   <li><a href="https://web.whatsapp.com/"><img src="../assets/whatsapp-logo-color.png" alt=""></a><a href="https://web.whatsapp.com/">+54 1112345678</a></li>
-                   <li class="gmailLi"><a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../assets/gmail-logo-color.png" alt=""></a><a href="https://www.google.com/intl/es-419/gmail/about/">lifetimeindumentaria@gmail.com</a></li>
-                   <li><a href=""><img src="../assets/telefono-logo.png" alt="">4747-2222</a></li>
-                </ul>
-            </div>
-           </section>
-           <section class="conteiner">
-            <div>
-            <nav class="footerCatalogo">
-                <ul>
-                    <li class="liCatalogo"><a href="./locales.html">LOCALES</a></li>
-                    <li class="liCatalogo"><a href="./catalogo.html">CATALOGO</a></li>
-                    <li class="liCatalogo"><a href="../index.html">VOLVER AL INICIO</a></li>
-                </ul>
-            </nav>
-           </section>
-           </div>
+            <section class="conteiner text-center">
+                <div class="row">
+                    <ul>
+                        <li class="col-12"><a href="https://instagram.com/lifetime.indumentaria?igshid=NzAzN2Q1NTE="><img src="../assets/instagram-logo-color.png" alt="logo de instagram"></a><a href="https://instagram.com/lifetime.indumentaria?igshid=NzAzN2Q1NTE=">lifetime.indumentaria</a></li>
+                        <li class="col-12"><a href="https://www.facebook.com/lifetime.indumentaria?mibextid=LQQJ4d"><img src="../assets/facebook-logo-color.png" alt="logo de facebook"></a><a href="https://www.facebook.com/lifetime.indumentaria?mibextid=LQQJ4d">Lifetime Indumentaria</a></li>
+                        <li class="col-12"><a href="https://web.whatsapp.com/"><img src="../assets/whatsapp-logo-color.png" alt="logo de whatsapp"></a><a href="https://web.whatsapp.com/">+54 1112345678</a></li>
+                        <li class="col-12"><a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../assets/gmail-logo-color.png" alt="logo de gmail"></a><a href="https://www.google.com/intl/es-419/gmail/about/">lifetimeindumentaria@gmail.com</a></li>
+                        <li class="col-12"><a href=""><img src="../assets/telefono-logo.png" alt="logo telefono">4747-2222</a></li>
+                    </ul>
+                </div>
+            </section>
         </section>
     </main>
+    <footer>
+        <nav class="footerCatalogo">
+            <ul>
+                <li class="liCatalogo"><a href="./catalogo.html">CATALOGO</a></li>
+                <li class="liCatalogo"><a href="./contactos.html">CONTACTOS</a></li>
+                <li class="liCatalogo"><a href="../index.html">VOLVER AL INICIO</a></li>
+            </ul>
+        </nav>
+    </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>    
