--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Conoce mas, quienes somos, locales de ropa,tiendas, ropa de mujer, indumentaria femenina">
+    <meta name="description" content="Conoce mas de nuestra pequeña historia.">
+    <meta name="author" content="Matias Verdejo">
+    <meta property="og:title" content="Lifetime Indumentaria">
+    <meta property="og:site_name" content="Lifetime Indumentaria">
+    <meta property="og:url" content="www.lifetimeindumentaria/Sobre-Nosotros.com">
+    <meta property="og:description" content="Conoce mas de nuestra pequeña historia.">
     <title>SOBRE NOSOTROS/LIFETIME INDUMENTARIA</title>
     <link rel="shortcut icon" href="../assets/tendedero.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -31,23 +39,18 @@
         <section>
             <div><h1 class="headerCatalogo">¡SOBRE NOSOTROS!</h1></div>
         </section>
-        <section class="mainSN">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis assumenda nemo accusamus consequuntur obcaecati voluptas consectetur expedita sapiente impedit incidunt atque quisquam pariatur possimus, numquam sequi tenetur quibusdam totam aperiam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                </p><br><p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus porro odio accusamus placeat obcaecati tenetur quidem aspernatur facere et. Molestiae ullam quia eligendi doloribus quaerat aperiam quo commodi aliquam aspernatur.
-                </p><br>
-        </section>
+        <section class="conteiner text-center">
+            <div class="row">
+                <div class="col-6"></div>
+                <div class="col-6"></div>
+                <p class="textoSN">
+                  Somos Matias y Lucila, empezamos este emprendimiento en plena pandemia con las ganas de emprender juntos. El nombre de nuestra marca es Lifetime, porque buscamos una palabra que nos identifique a los dos.
+                  Vendemos indumentaria femenina para todas las edades y todos los gustos. Con mucho esfurzo y sacrificio pusimos nuesrto primer local en Flores y hoy ya contamos con 3 sucursales.
+                  Busca todo lo que necesites en nuesttra tienda online o en las sucursales ubicadas en Flores (Av. Avellaneda & Nazca), Munro (Vélez Sarfield & Av. Bartolome Mitre) y Tigre (Shopping Remeros Plaza, <br>Av. Santa María de las Conchas).
+                  ¡¡¡Gracias por elegirnos!!!  
+                </p>
+            </div>
+        </section>    
     </main>
     <footer class="footerSN">
         <nav class="footerCatalogo">
@@ -59,5 +62,6 @@
             </ul>
         </nav>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
